force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_Rep2Nom__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Rep2Nom__c</fullName>
    <label>Rep2 - Nom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>