force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_ReponseQuestionSupplemenaire10__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ReponseQuestionSupplemenaire10__c</fullName>
    <label>Réponse Question Supplémenaire 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>