force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_ReponseQuestionSupplemenaire1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ReponseQuestionSupplemenaire1__c</fullName>
    <label>Réponse Question Supplémenaire 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>