force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_Revenu__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Revenu__c</fullName>
    <label>Revenu</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>