force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_Score__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Score__c</fullName>
    <description>score obtenu suivant les critères définis pour l&apos;entreprise</description>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>