force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_SituationFamiliale__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SituationFamiliale__c</fullName>
    <label>Situation Familiale</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Célibataire</fullName>
            </value>
            <value>
                <fullName>En couple</fullName>
            </value>
            <value>
                <fullName>Marié</fullName>
            </value>
            <value>
                <fullName>Pacsé</fullName>
            </value>
            <value>
                <fullName>Divorcé</fullName>
            </value>
            <value>
                <fullName>Séparé</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>