force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_SouhaiteRecevoirOffresPartenaires__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SouhaiteRecevoirOffresPartenaires__c</fullName>
    <label>Souhaite recevoir offres partenaires</label>
    <length>255</length>
    <type>Text</type>
</CustomField>