force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_Statut__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Statut__c</fullName>
    <description>Statut de la demande d&apos;inscription</description>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LPCR_StatutInscription</valueSetName>
    </valueSet>
</CustomField>