force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_StatutCourt__c.field-meta.xml
<CustomField>
    <fullName>LPCR_StatutCourt__c</fullName>
    <description>statut court pour affichage dans les rapports</description>
    <formula>IF(TEXT(LPCR_Statut__c)=&quot;Recommandation validée&quot;,&quot;RV&quot;,LEFT(TEXT(LPCR_Statut__c),1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut Court</label>
    <type>Text</type>
</CustomField>