force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_StatutReporting__c.field-meta.xml
<CustomField>
    <fullName>LPCR_StatutReporting__c</fullName>
    <formula>CASE(
  text(LPCR_Statut__c),
  &quot;Recommandation&quot;,
  &quot;Proposé&quot;,
  &quot;Recommandation validée&quot;,
  &quot;Proposé&quot;,
  &quot;Attribuée&quot;,
  &quot;Proposé&quot;,
  text(LPCR_Statut__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut reporting</label>
    <type>Text</type>
</CustomField>