force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_TelephoneDirectrice__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TelephoneDirectrice__c</fullName>
    <formula>LPCR_Creche__r.LPCR_ContactDirectrice__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Téléphone Directrice</label>
    <type>Text</type>
</CustomField>