force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_TypePreinscription__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypePreinscription__c</fullName>
    <label>Type de préinscription</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DSP</fullName>
            </value>
            <value>
                <fullName>Entreprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>