force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_UnDesEnfantDansCrecheDuReseau__c.field-meta.xml
<CustomField>
    <fullName>LPCR_UnDesEnfantDansCrecheDuReseau__c</fullName>
    <label>Un des enfant dans crèche du réseau</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>