force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_Undesenfantporteurdehandicap__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Undesenfantporteurdehandicap__c</fullName>
    <label>Un des enfants porteur de handicap?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>