force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_ValidationFormulaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ValidationFormulaire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation Formulaire</label>
    <type>Checkbox</type>
</CustomField>