force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_VersionDuFormulaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_VersionDuFormulaire__c</fullName>
    <label>Version du formulaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>