force-app/main/default/objects/LPCR_Preinscription__c/fields/NomEnfant__c.field-meta.xml
<CustomField>
    <fullName>NomEnfant__c</fullName>
    <label>Nom de l&#39;enfant</label>
    <length>80</length>
    <type>Text</type>
</CustomField>