force-app/main/default/objects/LPCR_Preinscription__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bébés</fullName>
            </value>
            <value>
                <fullName>Moyens</fullName>
            </value>
            <value>
                <fullName>Grands</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>