force-app/main/default/objects/LPCR_Preinscription__c/fields/Tech_DateEntreeCreche__c.field-meta.xml
<CustomField>
    <fullName>Tech_DateEntreeCreche__c</fullName>
    <formula>IF(MONTH(LPCR_DateEntreeCreche__c)= 9,&quot;Sept&quot;,&quot;Autre&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date d&apos;entrée en crèche (Mois)</label>
    <type>Text</type>
</CustomField>