force-app/main/default/objects/LPCR_Preinscription__c/fields/Tech_IsChanged__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IsChanged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Est modifié</label>
    <type>Checkbox</type>
</CustomField>