force-app/main/default/objects/LPCR_Preinscription__c/fields/Tech_LienFormulaire__c.field-meta.xml
<CustomField>
    <fullName>Tech_LienFormulaire__c</fullName>
    <description>Tech Lien Formulaire</description>
    <label>Tech Lien Formulaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>