force-app/main/default/objects/LPCR_Preinscription__c/fields/TECH_NombreDeJour__c.field-meta.xml
<CustomField>
    <fullName>TECH_NombreDeJour__c</fullName>
    <description>Utilisé pour mapping dans FormAssembly</description>
    <label>Tech Nombre De Jour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>