force-app/main/default/objects/LPCR_Preinscription__c/validationRules/VR_Attribuee_Require_DossierComplet.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Attribuee_Require_DossierComplet</fullName>
    <active>true</active>
    <description>On ne doit pas pouvoir passer une préinscription au statut P sans que la checkbox &quot;Dossier complet&quot; soit cochée et que la crèche ait été renseignée</description>
    <errorConditionFormula>AND(
    NOT($Permission.LPCR_ByPass_VR),
    TEXT(LPCR_Statut__c)=&quot;Attribuée&quot;,
    !LPCR_DossierComplet__c
    )</errorConditionFormula>
    <errorDisplayField>LPCR_DossierComplet__c</errorDisplayField>
    <errorMessage>Pour passer au statut Attribuée, il faut que le dossier soit complet.</errorMessage>
</ValidationRule>