force-app/main/default/objects/LPCR_Preinscription__c/validationRules/VR_Proposition_Require_Creche.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Proposition_Require_Creche</fullName>
    <active>true</active>
    <description>On ne doit pas pouvoir passer une préinscription au statut P sans que la checkbox &quot;Dossier complet&quot; soit cochée et que la crèche ait été renseignée</description>
    <errorConditionFormula>AND(
NOT($User.LPCR_BypassValidationRules__c),
TEXT(LPCR_Statut__c)=&quot;Proposition&quot;,
ISBLANK(LPCR_Creche__c)
)</errorConditionFormula>
    <errorDisplayField>LPCR_Creche__c</errorDisplayField>
    <errorMessage>Pour passer au statut proposition, il faut renseigner une crèche.</errorMessage>
</ValidationRule>