force-app/main/default/objects/LPCR_Preinscription__c/listViews/Liste_Pr_inscription.listView-meta.xml
<ListView>
    <fullName>Liste_Pr_inscription</fullName>
    <columns>NAME</columns>
    <columns>LPCR_ContactParent__c</columns>
    <columns>LPCR_ContactEnfant__c</columns>
    <columns>LPCR_Creche__c</columns>
    <columns>LPCR_ValidationFormulaire__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LPCR_Statut__c</columns>
    <filterScope>Everything</filterScope>
    <label>Liste Préinscription</label>
</ListView>